# upRooted

./: .env.example  .gitignore  .gitmodules  .mailmap  BUGS.md  CHANGELOG.md  CHANGELOG_PUBLIC.md  CLAUDE.md  CONTRIBUTING.md  Install-Uprooted.ps1  LICENSE  NEW-SESSION.md  NEXT-RELEASE.md  README.md  RELEASE-GUIDE.md  TASKS.md  Uninstall-Uprooted.ps1  VERSION  VIDEO_THUMB_WORKLOG.md  blog-public.md  install-canary.txt  install-uprooted-linux.sh  install-uprooted-linux.sh.upload  launch_test.ps1  package.json  trace_test.ps1  uninstall-uprooted-linux.sh  uprooted.sln
.claude/: COMMAND_INDEX.md  UPROOT_CLAUDE_DEV.md  hooks.json  settings.json  settings.local.json
docs/: ARCHITECTURE.md  BUILD.md  CLR_PROFILER.md  CONTRIBUTING_TECHNICAL.md  FRAMEWORK_GUIDE.md  FUTURE_PLANS.md  GRPC_LIB_REFERENCE.md  HOOK_REFERENCE.md  HOW_IT_WORKS.md  INDEX.md  INSTALLATION.md  INSTALLER.md  PLANNING_REFERENCE.md  PLUGIN_ROADMAP.md  RESEARCH_INDEX.md  ROADMAP.md  ROOTCORD_BUGS.md  ROOT_INTERNALS.md  TYPESCRIPT_REFERENCE.md
docs-site/: mkdocs.yml
hook/: AnimatedImage.cs  AuditLogEngine.cs  AutoUpdater.cs  AvaloniaReflection.cs  BrowserDiscovery.cs  ClearUrlsEngine.cs  ColorPickerPopup.cs  ColorUtils.cs  ContentPages.cs  DesktopNotification.cs  DevConsoleDropdown.cs  DotNetBrowserReflection.cs  Entry.cs  FocusModeEngine.cs  HtmlPatchVerifier.cs  LogConsole.cs  (+29 more)
hook-test/: MinimalHook.cs  MinimalHook.csproj  run.cmd  test_minimal.cmd  trace.cmd
installer/src-tauri/: Cargo.toml  tauri.conf.json
installer/src-tauri/src/: cli.rs  detection.rs  embedded.rs  hook.rs  main.rs  patcher.rs
(+2353 files in other folders)
